# ChatApp_2.0

./: CMakeLists.txt  Dockerfile  main.cpp
Classes/: Auth.hpp  Connect.hpp  Group.hpp  Hash.hpp  Member.hpp  Message.hpp  User.hpp
Config/: DbConfig.cpp  DbConfig.hpp
Scripts/: scriptsAuth.cpp  scriptsConnect.cpp  scriptsGroup.cpp  scriptsHash.cpp  scriptsMember.cpp  scriptsMessage.cpp  scriptsUser.cpp
